<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="horizontal"
	android:padding="5dp" >

	<TextView
		android:id="@+id/item_comment_author_name"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal|center_vertical"
		android:text="@string/default_user_name"
		android:textAppearance="?android:attr/textAppearanceMedium" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >

		<TextView
			android:id="@+id/item_comment_content"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="0.8"
			android:text="@string/default_comment" />

		<TextView
			android:id="@+id/item_comment_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom|right"
			android:layout_weight="0.2"
			android:text="@string/default_comment_time"
			android:textSize="12sp" />
	</LinearLayout>

</LinearLayout>